# Lab2_AI

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: python-cd.yml  python-publish.yml
fcaBayesian/: __init__.py
lab2_ia/: __init__.py
