[tool.poetry]
name = "lab2-ia"
version = "0.1.0"
description = ""
authors = ["JuanDiegoAvila <avi20090@uvg.edu.gt>", "Juan Angel Carrera <car20593@uvg.edu.gt>", "Diego Jose Franco <fra20240@uvg.edu.gt>"]
readme = "README.md"
packages = [{include = "lab2_ia"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
